--- a/WindowsFormsApplication1/Donhefinson.csproj
+++ b/WindowsFormsApplication1/Donhefinson.csproj
@@ -61,6 +61,18 @@
     <Compile Include="DrinkMenu.Designer.cs">
       <DependentUpon>DrinkMenu.cs</DependentUpon>
     </Compile>
+    <Compile Include="Admin_control.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Admin_control.Designer.cs">
+      <DependentUpon>Admin_control.cs</DependentUpon>
+    </Compile>
+    <Compile Include="MotorControl.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MotorControl.Designer.cs">
+      <DependentUpon>MotorControl.cs</DependentUpon>
+    </Compile>
     <Compile Include="Main.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -69,6 +81,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Admin_control.resx">
+      <DependentUpon>Admin_control.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="DrinkInfo.resx">
       <DependentUpon>DrinkInfo.cs</DependentUpon>
     </EmbeddedResource>
@@ -77,6 +92,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Main.resx">
       <DependentUpon>Main.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MotorControl.resx">
+      <DependentUpon>MotorControl.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
